folder structure modified

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-/target/
-/bin/
+
+out/
+build/
 .idea/
+
+*.class
+
+# Package Files #
+#*.jar
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+!/src/main/java/Test.java
+.DS_Store
 *.iml
-target/
-folder/
-pom.xml
+/target/
