--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ build/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 !/src/main/java/Test.java
-.DS_Store
+*/.DS_Store
 *.iml
 /target/
