--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-
-out/
-build/
-.idea/
-
-*.class
-
 # Package Files #
 #*.jar
 *.ear
@@ -12,6 +5,16 @@ build/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 !/src/main/java/Test.java
-.DS_Store/
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+
+# Compiled source #
 *.iml
 /target/
+/out/
+*.class
+out/
+build/
+.idea/
