#v.1.2.0 issue. twice env resolved

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,12 @@ hs_err_pid*
 .DS_Store
 .DS_Store?
 
-# Compiled source #
+
+# Compiled source files #
 *.iml
 /target/
 /out/
+/profiles.xml/
 *.class
 out/
 build/
