--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <url>https://github.com/contentstack/contentstack-java/tree/master</url>
         <connection>scm:git:git://github.com/contentstack/contentstack-java.git</connection>
         <developerConnection>scm:git:ssh://github.com:contentstack/contentstack-java.git</developerConnection>
-        <tag>v1.4.0</tag>
+        <tag>v1.4.2</tag>
     </scm>
 
     <issueManagement>
@@ -129,10 +129,11 @@
                             <goal>jar</goal>
                         </goals>
                         <configuration>
+                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                             <use>false</use>
                             <use>false</use>
                             <source>1.8</source>
-                                <links><link>http://docs.oracle.com/javase/7/docs/api/</link>		                             <link>http://docs.oracle.com/javase/7/docs/api/</link></links>
+                            <links><link>http://docs.oracle.com/javase/7/docs/api/</link>		                             <link>http://docs.oracle.com/javase/7/docs/api/</link></links>
                             <doclint>none</doclint>
                         </configuration>
                     </execution>
