--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 ### Code-Java ###
+
+src/test/java/com/contentstack/test/SyncTestCase.java
 # Language Support for Java(TM) by Red Hat extension for Visual Studio Code - https://marketplace.visualstudio.com/items?itemName=redhat.java
 
 .project
