issues resolved from Stack.java

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # src/test/java/com/contentstack/test/SyncTestCase.java
 # Language Support for Java(TM) by Red Hat extension for Visual Studio Code - https://marketplace.visualstudio.com/items?itemName=redhat.java
 
+src/main/java/com/contentstack/sdk/models
 .idea
 .project
 .classpath
@@ -264,3 +265,4 @@ gradle-app.setting
 java.iml
 src/main/resources/
 /.idea/
+/src/main/java/com/contentstack/sdk/models/
